[NOID] solved compile error